--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       <img src="images/logo-black.svg" class="header__logo-image" alt="Логотип Оно тебе надо" />
     </a>
     <address class="address">
-      <a href="+9 999 555 5555">+9 999 555 5555</a>
-      <a href="info@sobaka.ge">info@sobaka.ge</a>
+      <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+      <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
       <p> наб. Принсенграхт 263- <br> 265, Амстердам</p>
     </address>
   </header>
@@ -51,7 +51,7 @@
     <section class="lots">
       <h2 class="lots__heading">Лоты</h2>
       <ul class="lots__card-list">
-        <li class=" card lots__card-list-item card_type_film">
+        <li class="card lots__card-list-item card_type_film">
           <div class="overlay"></div>
           <h3 class="card__title"> <a href="" class="card-link">Фильм режиссёра, который бросил киношколу </a> </h3>
           <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не
