--- a/index.html
+++ b/index.html
@@ -1,10 +1,138 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-  </head>
-  <body></body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+  <link rel="stylesheet" href="./fonts/fonts.css" />
+  <link rel="stylesheet" href="./styles/global.css" />
+  <link rel="stylesheet" href="./styles/style.css" />
+</head>
+
+<body>
+  <header class="header">
+    <nav>
+      <ul class="header__menu-list">
+        <li class="header__menu-item_active">
+          <a href="#" class="header__menu-item_active">главная</a>
+        </li>
+        <li class="header__menu-item">
+          <a href="#" class="header__menu-link">посмотреть лоты</a>
+        </li>
+        <li class="header__menu-item">
+          <a href="#" class="header__menu-link">об аукционе</a>
+        </li>
+      </ul>
+    </nav>
+    <a>
+      <img src="images/logo-black.svg" class="header__logo-image" alt="Логотип Оно тебе надо" />
+    </a>
+    <address class="address">
+      <a href="tel:+99995555555">+9 999 555 5555</a>
+      <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+      <p> наб. Принсенграхт 263- <br> 265, Амстердам</p>
+    </address>
+  </header>
+  <main>
+    <section class="cover">
+      <div class="overlay"></div>
+      <h1 class="cover__title">
+        <span class="accent-span">он <span class="accent-span-o">о </span> </span>
+        <span class="accent-span-cover__text-center">теб <span class="accent-span-o">е </span></span>
+        <span class="accent-span-cover__text-right"> <span class="accent-span-o" >н</span> адо</span>
+      </h1>
+      <div class="cover__description">
+      <p class="cover__description cover__description-text">Аукцион вещей, в которые никто не верил</p>
+      <button class="cover__description__bet-button">Сделать ставку</button>
+    </div>
+    </section>
+    <section class="lots">
+      <h2 class="lots__heading">Лоты</h2>
+      <ul class="lots__card-list">
+        <li class="card lots__card-list-item card_type_film">
+          <div class="overlay"></div>
+          <h3 class="card__title"> <a href="" class="card-link">Фильм режиссёра, который бросил киношколу </a> </h3>
+          <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не
+            знали, что режиссёр — Пол Томас Андерсон?</p>
+        </li>
+
+        <li class=" card lots__card-list-item card_type_book">
+          <div class="overlay"></div>
+          <h3 class="card__title"> <a href="" class="card-link"> Книга, где описан один скучный день из жизни рекламного
+              агента</a> </h3>
+          <p class="card__text"> Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на
+            древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с
+            античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+            Джеймса Джойса?</p>
+        </li>
+        <li class=" card lots__card-list-item card_type_picture">
+          <div class="overlay"></div>
+          <h3 class="card__title"> <a href="" class="card-link"> Картина, которую повторит даже 5-летний сын маминой
+              подруги</a></h3>
+          <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на
+            инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что
+            это — одна из революционных работ Кандинского?</p>
+        </li>
+      </ul>
+      <a href="" class="lots__look-more-link">посмотреть больше</a>
+    </section>
+    <section class="about">
+      <ul class="about__column">
+        <li class="about__logo"></li>
+        <li>
+          <h4 class="about__title"> Об аукционе</h4>
+          <p class="about__text"> Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
+            Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка
+            или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+          </p>
+          <p class='about__text'> Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах
+            растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+            на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную
+            культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали
+            культовыми. </p>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <footer class="footer">
+    <ul class="footer_list">
+      <li>
+        <address class="address__footer">
+          <a href="+99995555555">+9 999 555 5555</a>
+          <a href="info@sobaka.ge">info@sobaka.ge</a>
+          <p> наб. Принсенграхт 263- <br> 265, Амстердам</p>
+        </address>
+      </li>
+    </ul>
+    <li>
+      <nav>
+        <ul class="footer__menu-list">
+          <li class="footer__menu-item_active">
+            <a href="#" class="footer__menu-item_active">главная</a>
+          </li>
+          <li class="footer__menu-item">
+            <a href="#" class="header__menu-link">посмотреть лоты</a>
+          </li>
+          <li class="footer__menu-item">
+            <a href="#" class="header__menu-link">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+    </li>
+    <ul class="footer__icons">
+      <li>
+        <img src="images/yt.svg" class="footer_icons_img" alt="Иконка ютуба">
+      </li>
+      <li>
+        <img src="images/vk.svg" class="footer_icons_img" alt="Иконка Вконтакте">
+      </li>
+      <li>
+        <img src="images/pinterest.svg" class="footer_icons_img" alt="Иконка пинтереста">
+      </li>
+    </ul>
+  </footer>
+</body>
+
 </html>
