--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <img src="images/logo-black.svg" class="header__logo-image" alt="Логотип Оно тебе надо" />
     </a>
     <address class="address">
-      <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+      <a href="tel:+99995555555">+9 999 555 5555</a>
       <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
       <p> наб. Принсенграхт 263- <br> 265, Амстердам</p>
     </address>
@@ -67,7 +67,6 @@
             античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
             Джеймса Джойса?</p>
         </li>
-        </li>
         <li class=" card lots__card-list-item card_type_picture">
           <div class="overlay"></div>
           <h3 class="card__title"> <a href="" class="card-link"> Картина, которую повторит даже 5-летний сын маминой
@@ -75,7 +74,6 @@
           <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на
             инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что
             это — одна из революционных работ Кандинского?</p>
-        </li>
         </li>
       </ul>
       <a href="" class="lots__look-more-link">посмотреть больше</a>
@@ -98,17 +96,16 @@
       </ul>
     </section>
   </main>
-  <section class="footer">
+  <footer class="footer">
     <ul class="footer_list">
       <li>
         <address class="address__footer">
-          <a href="+9 999 555 5555">+9 999 555 5555</a>
+          <a href="+99995555555">+9 999 555 5555</a>
           <a href="info@sobaka.ge">info@sobaka.ge</a>
           <p> наб. Принсенграхт 263- <br> 265, Амстердам</p>
         </address>
       </li>
     </ul>
-    <li>
       <nav>
         <ul class="footer__menu-list">
           <li class="footer__menu-item_active">
@@ -122,18 +119,18 @@
           </li>
         </ul>
       </nav>
-    </li>
-    <li class="footer__icons">
-      <ul>
+    <ul class="footer__icons">
+      <li>
         <img src="images/yt.svg" class="footer_icons_img" alt="Иконка ютуба">
-      </ul>
-      <ul>
+      </li>
+      <li>
         <img src="images/vk.svg" class="footer_icons_img" alt="Иконка Вконтакте">
-      </ul>
-      <ul>
+      </li>
+      <li>
         <img src="images/pinterest.svg" class="footer_icons_img" alt="Иконка пинтереста">
-      </ul>
-    </li>
+      </li>
+    </ul>
+  </footer>
 </body>
 
 </html>
